--- a/Views/MyProfileWindow.xaml
+++ b/Views/MyProfileWindow.xaml
@@ -29,7 +29,10 @@
             <PasswordBox x:Name="txtPassword" MaterialDesign:HintAssist.Hint="{Binding Password}" Margin="0,0,0,10"/>
             <TextBox x:Name="txtTelefon" MaterialDesign:HintAssist.Hint="{Binding Phone}" Margin="0,0,0,10"/>
 
-            <TextBox x:Name="txtStatus" MaterialDesign:HintAssist.Hint="{Binding Status}" IsReadOnly="True" Margin="0,0,0,10"/>
+            <ComboBox x:Name="cbStatus" MaterialDesign:HintAssist.Hint="{Binding Status}" Margin="0,0,0,10">
+                <ComboBoxItem Content="{Binding Available}"/>
+                <ComboBoxItem Content="{Binding Unavailable}"/>
+            </ComboBox>
 
             <Button Content="{Binding SaveButton}" Height="40" Background="{DynamicResource PrimaryColor}"
                     Foreground="White" FontWeight="Bold" Click="Save_Click"/>
